changed theme overflow bug, changed bug with sbsys not importing closed bullet points

--- a/public_html/profiles/os2dagsorden/themes/os2dagsorden_theme/css/global.css
+++ b/public_html/profiles/os2dagsorden/themes/os2dagsorden_theme/css/global.css
@@ -698,6 +698,10 @@ div.attachment{
     overflow: hidden;
 }
 
+.block-views .view-user-logout-menu .view-content{
+    overflow: visible;
+}
+
 /*---------------------------- Views End ----------------------------*/
 
 /*---------------------------- Blocks START ----------------------------*/
